# mineconda

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  README.zh-CN.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: s3-smoke.yml  test.yml
crates/mineconda-cli/: Cargo.toml
crates/mineconda-cli/src/: cli.rs  i18n.rs  lib.rs  main.rs  project.rs  report.rs  search_tui.rs  test_support.rs  tests.rs  workspace_batch.rs
crates/mineconda-cli/src/command/: cache.rs  doctor.rs  env.rs  import_export.rs  lock.rs  mod.rs  mods.rs  run.rs  search.rs  status.rs  sync.rs  tree_why.rs
crates/mineconda-cli/src/command/tree_why/: graph.rs  tree.rs  why.rs
crates/mineconda-core/: Cargo.toml
crates/mineconda-core/src/: lib.rs
crates/mineconda-export/: Cargo.toml
crates/mineconda-export/src/: lib.rs
crates/mineconda-export/tests/: export_snapshots.rs
crates/mineconda-export/tests/fixtures/export-pack/: mineconda.toml
crates/mineconda-export/tests/fixtures/export-pack/expected/: curseforge.manifest.json  modrinth.index.json  mods-desc.json  multimc.pack.json
crates/mineconda-resolver/: Cargo.toml
crates/mineconda-resolver/src/: lib.rs
crates/mineconda-resolver/tests/: local_fixture_lockfile.rs
crates/mineconda-resolver/tests/fixtures/local-pack/: expected.lock.toml  mineconda.toml
crates/mineconda-runner/: Cargo.toml
crates/mineconda-runner/src/: lib.rs
crates/mineconda-runtime/: Cargo.toml
crates/mineconda-runtime/src/: lib.rs
crates/mineconda-sync/: Cargo.toml
crates/mineconda-sync/src/: lib.rs
crates/mineconda-sync/tests/: sync_cache.rs
docs/: architecture.md  usage.md
scripts/: actual-neoforge-server-smoke.sh  build-run-smoke-fixtures.sh  ci-smoke.sh  s3-smoke-remote.sh  s3-smoke-wsl.sh
scripts/fixtures/run/: MinecondaSmokeMain.java
