[workspace]
members = [
  "crates/mineconda-cli",
  "crates/mineconda-core",
  "crates/mineconda-resolver",
  "crates/mineconda-export",
  "crates/mineconda-runner",
  "crates/mineconda-runtime",
  "crates/mineconda-sync",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["mineconda contributors"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "0.8"
zip = "2.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
flate2 = "1.1"
tar = "0.4"
sha2 = "0.10"
semver = "1.0"
terminal_size = "0.4"
unicode-width = "0.2"
crossterm = "0.29"
ratatui = "0.29"
hmac = "0.12"
rayon = "1.10"
quick-xml = { version = "0.38", features = ["serialize"] }
time = { version = "0.3", features = ["parsing"] }
