[package]
name = "mineconda-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "mineconda"

[[bin]]
name = "mineconda"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
terminal_size.workspace = true
unicode-width.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde_json.workspace = true
reqwest.workspace = true
mineconda-core = { path = "../mineconda-core" }
mineconda-export = { path = "../mineconda-export" }
mineconda-resolver = { path = "../mineconda-resolver" }
mineconda-runner = { path = "../mineconda-runner" }
mineconda-runtime = { path = "../mineconda-runtime" }
mineconda-sync = { path = "../mineconda-sync" }
