[package]
name = "mineconda-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
zip.workspace = true
mineconda-core = { path = "../mineconda-core" }
